# birds_of_vinca

./: .gitignore  CLAUDE.md  README.md  birds-of-vinca.code-workspace  image deduplication.mhtml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  docker-compose.yml  setup-venvs.sh
curator/: .env.example  README.md  check.sh  cloudbuild.yaml  main.py  pyproject.toml
curator/src/curator/: __init__.py  backpost_instagram.py  images.py  instagram.py  main.py  storage.py  videos.py  weather.py
curator/tests/: sample_payload.json  test_main.py
libs/: __init__.py
libs/bov_data/: README.md  check.sh  pyproject.toml
libs/bov_data/src/bov_data/: __init__.py  data.py  db.py  mongo.py  sighting.py
libs/bov_data/tests/: __init__.py
poll_sightings/: .env.example  README.md  check.sh  cloudbuild.yaml  main.py  pyproject.toml
poll_sightings/src/poll_sightings/: __init__.py  main.py  process.py  seed_db.py
poll_sightings/tests/: test_main.py  test_process.py
