[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poll-sightings"
version = "0.1.0"
description = "Poll sightings service for Birds of Vinca"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Birds of Vinca Team"}
]
dependencies = [
    "google-cloud-tasks>=2.21.0",
    "pybirdbuddy>=0.0.19",
    "pymongo>=4.6.0",
    "python-dotenv>=1.2.1",
    "bov-data @ file:///workspaces/birds_of_vinca/libs/bov_data"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
